--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -8,7 +8,8 @@ html{
   background: #ddd;
 }
 body{
-  background-color:#F9F9F9;
+  /*background-color:#F9F9F9;*/
+  background-color:#FFFFFF;
   margin:0;
   width: 100%;
   font-size:.24rem;
