--- a/src/assets/css/consultantDetail.css
+++ b/src/assets/css/consultantDetail.css
@@ -44,7 +44,7 @@
   padding-top: 0.7rem;
 }
 
-.line{
+.title-line{
   border-left: 2px solid #451C81;
   margin-left: 1rem;
   padding-left: 0.7rem;
