--- a/src/assets/css/consultantMode.css
+++ b/src/assets/css/consultantMode.css
@@ -23,6 +23,7 @@
   font-size: 0.81rem;
   width: 5.6rem;
   height: 1.4rem;
+  line-height: 1.4rem;
   margin-right: 0.9rem;
   margin-left: 0.9rem;
   flex: 1;
