--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -29,6 +29,11 @@
 }
 .consultant-list{
   /*overflow: hidden;*/
+  /*position: absolute;*/
+  /*overflow: auto;*/
+  /*max-height: 600px;*/
+
+  /*padding-top: 200px;*/
 }
 .consultant{
   display: flex;
