--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,3 +1,21 @@
+.search-imge{
+  position: absolute;
+  width:1.5rem;
+  top: 0.8rem;
+  left: 7%;
+}
+.search{
+  position: absolute;
+  border-radius: 1rem;
+  top: 0.5rem;
+  left: 5%;
+  height: 2rem;
+  line-height: 2rem;
+  width: 80%;
+  padding-left: 2.5rem;
+  border:0px;
+  background:rgba(255,255,255,0.7);
+}
 
 .screening-conditions{
   display: flex;
