提交“藏龙”代码

--- a/src/assets/css/consultantMode.css
+++ b/src/assets/css/consultantMode.css
@@ -33,6 +33,9 @@
   background: #FAFAFA;
   color: #828282;
 }
+.consultant-mode-grade-hidden{
+  background: #FFFFFF;
+}
 .consultant-mode-grade-ensure{
   background: #451C81;
   color: #FFFFFF;
