--- a/src/assets/css/consultantDetail.css
+++ b/src/assets/css/consultantDetail.css
@@ -43,7 +43,12 @@
   height: 7rem;
   padding-top: 0.7rem;
 }
-
+.consultant-field-detail{
+  background: #FFFFFF;
+  height: 7rem;
+  padding-top: 0.7rem;
+  margin-bottom: 1rem;
+}
 .title-line{
   border-left: 2px solid #451C81;
   margin-left: 1rem;
@@ -65,4 +70,8 @@
   margin-left: 2rem;
   margin-right: 2rem;
   margin-top: 1rem;
+}
+
+.consulting-field-detail{
+  margin-right: 1rem;
 }
