--- a/src/assets/css/consultantField.css
+++ b/src/assets/css/consultantField.css
@@ -18,6 +18,7 @@
   flex: 1;
   display: flex;
   margin-bottom: 0.7rem;
+  width:23rem;
 }
 
 .consultant-field-grade{
@@ -27,7 +28,7 @@
   line-height: 1.4rem;
   margin-right: 0.9rem;
   margin-left: 0.9rem;
-  flex: 1;
+  /*flex: 1;*/
 }
 .consultant-field-grade-unensure{
   background: #FAFAFA;
