--- a/src/assets/css/consultantField.css
+++ b/src/assets/css/consultantField.css
@@ -1,5 +1,5 @@
 .consultant-field-component{
-  height: 19rem;
+  height: auto;
 }
 .consultant-field-title{
   color: #4A4A4A;
@@ -18,6 +18,7 @@
   flex: 1;
   display: flex;
   margin-bottom: 0.7rem;
+  /*margin-left: .5rem;*/
   width:23rem;
 }
 
