--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -51,7 +51,7 @@
   /*overflow: auto;*/
   /*max-height: 600px;*/
 
-  /*padding-top: 200px;*/
+  padding-top: .1rem;
 }
 .consultant{
   display: flex;
